--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,12 @@
 
     <TextView
         android:id="@+id/tv_title"
+        style="@style/TitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/open_sans"
         android:text="Calculadora de Gorjeta"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="32sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,13 +22,11 @@
 
     <TextView
         android:id="@+id/tv_subtitle"
+        style="@style/SubtitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:fontFamily="@font/open_sans"
         android:text="Preencha os campos abaixo para realizar o cálculo da sua conta"
-        android:textColor="@color/black"
-        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +44,9 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tie_total"
+            style="@style/CustomTextInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary_700"
             android:hint="Digite valor total da conta"
             android:inputType="numberDecimal"
             android:maxLength="7"
@@ -82,24 +76,22 @@
 
     <Button
         android:id="@+id/btn_clean"
+        style="@style/PrimaryButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="16dp"
         android:text="Limpar"
-        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_guideline"
         app:layout_constraintStart_toStartOf="@+id/til_number_of_people" />
 
     <Button
         android:id="@+id/btn_done"
+        style="@style/PrimaryButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="16dp"
         android:text="Calcular"
-        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/til_number_of_people"
         app:layout_constraintStart_toStartOf="@+id/btn_guideline" />
