--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,29 @@
         <item name="android:fontFamily">@font/open_sans</item>
         <item name="android:statusBarColor">@color/colorPrimary_500</item>
     </style>
-
     <style name="Theme.AppGorjeta" parent="Base.Theme.AppGorjeta" />
+
+    <style name="TitleText" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/open_sans</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="SubtitleText" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/open_sans</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="PrimaryButton" parent="Widget.Material3.Button">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+    </style>
+
+    <style name="CustomTextInput" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:background">@color/colorPrimary_700</item>
+    </style>
 </resources>
