--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,37 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_hint_total_table"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:paddingStart="16dp"
+        android:text="Digite o valor da conta:"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
+        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />
+
+    <TextView
+        android:id="@+id/tv_hint_num_of_people"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:paddingStart="16dp"
+        android:text="Número de pessoas:"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/til_total"
+        app:layout_constraintTop_toBottomOf="@+id/til_total" />
+
+    <TextView
         android:id="@+id/tv_title"
         style="@style/TitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
         android:text="Calculadora de Gorjeta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -26,7 +51,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="Preencha os campos abaixo para realizar o cálculo da sua conta"
+        android:textAlignment="viewStart"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,44 +65,49 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_total"
-        app:hintEnabled="false"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle">
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
+        app:layout_constraintStart_toStartOf="@+id/tv_hint_total_table"
+        app:layout_constraintTop_toBottomOf="@+id/tv_hint_total_table">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tie_total"
-            style="@style/CustomTextInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite valor total da conta"
+            android:hint="Ex: R$ 250,00"
             android:inputType="numberDecimal"
             android:maxLength="7"
-            android:textSize="14dp" />
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_number_of_people"
-        app:hintEnabled="false"
-        android:layout_width="match_parent"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_total">
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="@+id/til_total"
+        app:layout_constraintStart_toStartOf="@+id/til_total"
+        app:layout_constraintTop_toBottomOf="@+id/tv_hint_num_of_people">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tie_num_people"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary_700"
-            android:hint="Digite o número de pessoas na mesa"
-            android:inputType="numberDecimal"
+            android:hint="Ex: 7"
+            android:inputType="number"
             android:maxLength="2"
-            android:textSize="14dp" />
+            android:paddingStart="16dp"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -119,13 +155,14 @@
             android:id="@+id/rg_tip_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="12dp">
 
             <RadioButton
                 android:id="@+id/rb_tip_custom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="8dp"
+                android:paddingEnd="16dp"
                 android:text="Adicionar gorjeta"
                 android:textSize="16dp" />
 
@@ -133,14 +170,27 @@
                 android:id="@+id/rb_no_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="8dp"
                 android:text="Sem gorjeta"
                 android:textSize="16dp" />
 
         </RadioGroup>
 
+        <TextView
+            android:id="@+id/tv_hint_tip_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="0dp"
+            android:text="Porcentagem da gorjeta:"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_tip_value"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
             app:hintEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -150,11 +200,13 @@
                 android:id="@+id/tie_tip_Value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary_700"
-                android:hint="Valor da gorjeta %"
+                android:hint="Ex: 10%"
                 android:inputType="numberDecimal"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
+                android:maxLength="5"
+                android:paddingStart="16dp"
+                android:paddingEnd="8dp"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
